Major bug in dependent mode fixed.